// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Filter dialogue component > doesn't render filter dialogue when dialogue is close 1`] = `
<body
  style=""
>
  <div />
</body>
`;

exports[`Filter dialogue component > renders filter dialogue when dialogue is open (favourite filter section) 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root MuiModal-root css-1424xw8-MuiModal-root-MuiDialog-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiModal-backdrop css-1cennmq-MuiBackdrop-root-MuiDialog-backdrop"
      style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container MuiDialog-scrollPaper css-19do60a-MuiDialog-container"
      role="presentation"
      style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-label="Filters"
        aria-labelledby=":r9:"
        aria-modal="true"
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthLg MuiDialog-paperFullWidth css-18x6di2-MuiPaper-root-MuiDialog-paper"
        role="dialog"
        style="--Paper-shadow: 0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiTabs-root css-jhczcq-MuiTabs-root"
        >
          <div
            class="MuiTabs-scroller MuiTabs-fixed css-s2t35c-MuiTabs-scroller"
            style="overflow: hidden; margin-bottom: 0px;"
          >
            <div
              aria-label="view tabs"
              class="MuiTabs-list MuiTabs-flexContainer css-hzcega-MuiTabs-list"
              role="tablist"
            >
              <button
                aria-controls="Filters-tabpanel"
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-aqbpvk-MuiButtonBase-root-MuiTab-root"
                id="Filters-tab"
                role="tab"
                tabindex="-1"
                type="button"
              >
                Filters
              </button>
              <button
                aria-controls="Favourite filters-tabpanel"
                aria-selected="true"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-aqbpvk-MuiButtonBase-root-MuiTab-root"
                id="Favourite filters-tab"
                role="tab"
                tabindex="0"
                type="button"
              >
                <div
                  class="MuiBox-root css-70qvj9"
                >
                  Favourite filters
                  <div
                    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-filledPrimary css-1di574v-MuiChip-root"
                  >
                    <span
                      class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                    >
                      0
                    </span>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root css-r3djoj-MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              class="MuiTabs-indicator css-1qltlow-MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
        <div
          class="MuiDialogContent-root css-kw13he-MuiDialogContent-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-18i0w5n-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-2a57i0-MuiGrid2-root"
            >
              <div
                aria-labelledby="Filters-tab"
                hidden=""
                id="Filters-tabpanel"
                role="tabpanel"
                style="width: 100%;"
              />
              <div
                aria-labelledby="Favourite filters-tab"
                id="Favourite filters-tabpanel"
                role="tabpanel"
                style="width: 100%;"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-grow css-2edihr-MuiGrid2-root"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-wyro15-MuiButtonBase-root-MuiButton-root"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-d8i980-MuiButton-startIcon"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                          data-testid="AddCircleIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m5 11h-4v4h-2v-4H7v-2h4V7h2v4h4z"
                          />
                        </svg>
                      </span>
                      Add new favourite filter
                    </button>
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1swgirf-MuiGrid2-root"
                  >
                    <div
                      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-44clmb-MuiGrid2-root"
                    >
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0.5 css-1t74bsq-MuiGrid2-root"
                      >
                        <span
                          class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-imrjgg-MuiButtonBase-root-MuiCheckbox-root"
                        >
                          <input
                            aria-label="Select test 1 favourite filter"
                            class="PrivateSwitchBase-input css-j8yymo"
                            data-indeterminate="false"
                            type="checkbox"
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                            data-testid="CheckBoxOutlineBlankIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-5 css-1ipvduc-MuiGrid2-root"
                      >
                        <div
                          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-pgee41-MuiFormControl-root-MuiTextField-root"
                        >
                          <label
                            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-hvjq6j-MuiFormLabel-root-MuiInputLabel-root"
                            data-shrink="true"
                            for=":rj:"
                            id=":rj:-label"
                          >
                            Name
                          </label>
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall Mui-readOnly MuiInputBase-readOnly css-1blp12k-MuiInputBase-root-MuiOutlinedInput-root"
                          >
                            <input
                              aria-invalid="false"
                              class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled MuiInputBase-inputSizeSmall Mui-readOnly MuiInputBase-readOnly css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
                              disabled=""
                              id=":rj:"
                              readonly=""
                              type="text"
                              value="test 1"
                            />
                            <fieldset
                              aria-hidden="true"
                              class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
                            >
                              <legend
                                class="css-w1u3ce"
                              >
                                <span>
                                  Name
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-5.5 css-1st6taw-MuiGrid2-root"
                      >
                        <div
                          class="MuiAutocomplete-root MuiAutocomplete-fullWidth css-4z7hu2-MuiAutocomplete-root"
                        >
                          <div
                            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                          >
                            <label
                              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-hvjq6j-MuiFormLabel-root-MuiInputLabel-root"
                              data-shrink="true"
                              for=":rk:"
                              id=":rk:-label"
                            >
                              Filter
                            </label>
                            <div
                              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedStart MuiInputBase-adornedEnd Mui-readOnly MuiAutocomplete-inputRoot MuiInputBase-readOnly css-1e3qgpi-MuiInputBase-root-MuiOutlinedInput-root"
                              data-id="Input"
                            >
                              <div
                                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault MuiAutocomplete-tag MuiAutocomplete-tagSizeSmall css-8aqjdy-MuiChip-root"
                                data-tag-index="0"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                                >
                                  Active Experiment
                                </span>
                              </div>
                              <div
                                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault MuiAutocomplete-tag MuiAutocomplete-tagSizeSmall css-8aqjdy-MuiChip-root"
                                data-tag-index="1"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                                >
                                  &gt;
                                </span>
                              </div>
                              <div
                                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault MuiAutocomplete-tag MuiAutocomplete-tagSizeSmall css-8aqjdy-MuiChip-root"
                                data-tag-index="2"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                                >
                                  3
                                </span>
                              </div>
                              <input
                                aria-autocomplete="list"
                                aria-expanded="false"
                                aria-invalid="false"
                                autocapitalize="none"
                                autocomplete="off"
                                class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd Mui-readOnly MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-readOnly css-12tjcea-MuiInputBase-input-MuiOutlinedInput-input"
                                id=":rk:"
                                readonly=""
                                role="combobox"
                                spellcheck="false"
                                type="text"
                                value=""
                              />
                              <fieldset
                                aria-hidden="true"
                                class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
                              >
                                <legend
                                  class="css-w1u3ce"
                                >
                                  <span>
                                    Filter
                                  </span>
                                </legend>
                              </fieldset>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0.5 css-1t74bsq-MuiGrid2-root"
                      >
                        <button
                          aria-label="Edit test 1 favourite filter"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
                          data-mui-internal-clone-element="true"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                            data-testid="EditIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0.5 css-1t74bsq-MuiGrid2-root"
                      >
                        <button
                          aria-label="Delete test 1 favourite filter"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
                          data-mui-internal-clone-element="true"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                            data-testid="DeleteIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-44clmb-MuiGrid2-root"
                    >
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0.5 css-1t74bsq-MuiGrid2-root"
                      >
                        <span
                          class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-imrjgg-MuiButtonBase-root-MuiCheckbox-root"
                        >
                          <input
                            aria-label="Select test 2 favourite filter"
                            class="PrivateSwitchBase-input css-j8yymo"
                            data-indeterminate="false"
                            type="checkbox"
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                            data-testid="CheckBoxOutlineBlankIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-5 css-1ipvduc-MuiGrid2-root"
                      >
                        <div
                          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-pgee41-MuiFormControl-root-MuiTextField-root"
                        >
                          <label
                            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-hvjq6j-MuiFormLabel-root-MuiInputLabel-root"
                            data-shrink="true"
                            for=":rq:"
                            id=":rq:-label"
                          >
                            Name
                          </label>
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall Mui-readOnly MuiInputBase-readOnly css-1blp12k-MuiInputBase-root-MuiOutlinedInput-root"
                          >
                            <input
                              aria-invalid="false"
                              class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled MuiInputBase-inputSizeSmall Mui-readOnly MuiInputBase-readOnly css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
                              disabled=""
                              id=":rq:"
                              readonly=""
                              type="text"
                              value="test 2"
                            />
                            <fieldset
                              aria-hidden="true"
                              class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
                            >
                              <legend
                                class="css-w1u3ce"
                              >
                                <span>
                                  Name
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-5.5 css-1st6taw-MuiGrid2-root"
                      >
                        <div
                          class="MuiAutocomplete-root MuiAutocomplete-fullWidth css-4z7hu2-MuiAutocomplete-root"
                        >
                          <div
                            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                          >
                            <label
                              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-hvjq6j-MuiFormLabel-root-MuiInputLabel-root"
                              data-shrink="true"
                              for=":rr:"
                              id=":rr:-label"
                            >
                              Filter
                            </label>
                            <div
                              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedStart MuiInputBase-adornedEnd Mui-readOnly MuiAutocomplete-inputRoot MuiInputBase-readOnly css-1e3qgpi-MuiInputBase-root-MuiOutlinedInput-root"
                              data-id="Input"
                            >
                              <div
                                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault MuiAutocomplete-tag MuiAutocomplete-tagSizeSmall css-8aqjdy-MuiChip-root"
                                data-tag-index="0"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                                >
                                  Shot Number
                                </span>
                              </div>
                              <div
                                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault MuiAutocomplete-tag MuiAutocomplete-tagSizeSmall css-8aqjdy-MuiChip-root"
                                data-tag-index="1"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                                >
                                  =
                                </span>
                              </div>
                              <div
                                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault MuiAutocomplete-tag MuiAutocomplete-tagSizeSmall css-8aqjdy-MuiChip-root"
                                data-tag-index="2"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                                >
                                  1
                                </span>
                              </div>
                              <input
                                aria-autocomplete="list"
                                aria-expanded="false"
                                aria-invalid="false"
                                autocapitalize="none"
                                autocomplete="off"
                                class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd Mui-readOnly MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-readOnly css-12tjcea-MuiInputBase-input-MuiOutlinedInput-input"
                                id=":rr:"
                                readonly=""
                                role="combobox"
                                spellcheck="false"
                                type="text"
                                value=""
                              />
                              <fieldset
                                aria-hidden="true"
                                class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
                              >
                                <legend
                                  class="css-w1u3ce"
                                >
                                  <span>
                                    Filter
                                  </span>
                                </legend>
                              </fieldset>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0.5 css-1t74bsq-MuiGrid2-root"
                      >
                        <button
                          aria-label="Edit test 2 favourite filter"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
                          data-mui-internal-clone-element="true"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                            data-testid="EditIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0.5 css-1t74bsq-MuiGrid2-root"
                      >
                        <button
                          aria-label="Delete test 2 favourite filter"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
                          data-mui-internal-clone-element="true"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                            data-testid="DeleteIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-44clmb-MuiGrid2-root"
                    >
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0.5 css-1t74bsq-MuiGrid2-root"
                      >
                        <span
                          class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-imrjgg-MuiButtonBase-root-MuiCheckbox-root"
                        >
                          <input
                            aria-label="Select test 3 favourite filter"
                            class="PrivateSwitchBase-input css-j8yymo"
                            data-indeterminate="false"
                            type="checkbox"
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                            data-testid="CheckBoxOutlineBlankIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-5 css-1ipvduc-MuiGrid2-root"
                      >
                        <div
                          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-pgee41-MuiFormControl-root-MuiTextField-root"
                        >
                          <label
                            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-hvjq6j-MuiFormLabel-root-MuiInputLabel-root"
                            data-shrink="true"
                            for=":r11:"
                            id=":r11:-label"
                          >
                            Name
                          </label>
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall Mui-readOnly MuiInputBase-readOnly css-1blp12k-MuiInputBase-root-MuiOutlinedInput-root"
                          >
                            <input
                              aria-invalid="false"
                              class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled MuiInputBase-inputSizeSmall Mui-readOnly MuiInputBase-readOnly css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
                              disabled=""
                              id=":r11:"
                              readonly=""
                              type="text"
                              value="test 3"
                            />
                            <fieldset
                              aria-hidden="true"
                              class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
                            >
                              <legend
                                class="css-w1u3ce"
                              >
                                <span>
                                  Name
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-5.5 css-1st6taw-MuiGrid2-root"
                      >
                        <div
                          class="MuiAutocomplete-root MuiAutocomplete-fullWidth css-4z7hu2-MuiAutocomplete-root"
                        >
                          <div
                            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                          >
                            <label
                              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-hvjq6j-MuiFormLabel-root-MuiInputLabel-root"
                              data-shrink="true"
                              for=":r12:"
                              id=":r12:-label"
                            >
                              Filter
                            </label>
                            <div
                              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedStart MuiInputBase-adornedEnd Mui-readOnly MuiAutocomplete-inputRoot MuiInputBase-readOnly css-1e3qgpi-MuiInputBase-root-MuiOutlinedInput-root"
                              data-id="Input"
                            >
                              <div
                                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault MuiAutocomplete-tag MuiAutocomplete-tagSizeSmall css-8aqjdy-MuiChip-root"
                                data-tag-index="0"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                                >
                                  Active Experiment
                                </span>
                              </div>
                              <div
                                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault MuiAutocomplete-tag MuiAutocomplete-tagSizeSmall css-8aqjdy-MuiChip-root"
                                data-tag-index="1"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                                >
                                  =
                                </span>
                              </div>
                              <div
                                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault MuiAutocomplete-tag MuiAutocomplete-tagSizeSmall css-8aqjdy-MuiChip-root"
                                data-tag-index="2"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                                >
                                  1
                                </span>
                              </div>
                              <input
                                aria-autocomplete="list"
                                aria-expanded="false"
                                aria-invalid="false"
                                autocapitalize="none"
                                autocomplete="off"
                                class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd Mui-readOnly MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-readOnly css-12tjcea-MuiInputBase-input-MuiOutlinedInput-input"
                                id=":r12:"
                                readonly=""
                                role="combobox"
                                spellcheck="false"
                                type="text"
                                value=""
                              />
                              <fieldset
                                aria-hidden="true"
                                class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
                              >
                                <legend
                                  class="css-w1u3ce"
                                >
                                  <span>
                                    Filter
                                  </span>
                                </legend>
                              </fieldset>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0.5 css-1t74bsq-MuiGrid2-root"
                      >
                        <button
                          aria-label="Edit test 3 favourite filter"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
                          data-mui-internal-clone-element="true"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                            data-testid="EditIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0.5 css-1t74bsq-MuiGrid2-root"
                      >
                        <button
                          aria-label="Delete test 3 favourite filter"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
                          data-mui-internal-clone-element="true"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                            data-testid="DeleteIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiDialogActions-root MuiDialogActions-spacing css-15fu35s-MuiDialogActions-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1uent87-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Close
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1uent87-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Apply
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Filter dialogue component > renders filter dialogue when dialogue is open (filter section) 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root MuiModal-root css-1424xw8-MuiModal-root-MuiDialog-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiModal-backdrop css-1cennmq-MuiBackdrop-root-MuiDialog-backdrop"
      style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container MuiDialog-scrollPaper css-19do60a-MuiDialog-container"
      role="presentation"
      style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-label="Filters"
        aria-labelledby=":r0:"
        aria-modal="true"
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthLg MuiDialog-paperFullWidth css-18x6di2-MuiPaper-root-MuiDialog-paper"
        role="dialog"
        style="--Paper-shadow: 0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiTabs-root css-jhczcq-MuiTabs-root"
        >
          <div
            class="MuiTabs-scroller MuiTabs-fixed css-s2t35c-MuiTabs-scroller"
            style="overflow: hidden; margin-bottom: 0px;"
          >
            <div
              aria-label="view tabs"
              class="MuiTabs-list MuiTabs-flexContainer css-hzcega-MuiTabs-list"
              role="tablist"
            >
              <button
                aria-controls="Filters-tabpanel"
                aria-selected="true"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-aqbpvk-MuiButtonBase-root-MuiTab-root"
                id="Filters-tab"
                role="tab"
                tabindex="0"
                type="button"
              >
                Filters
              </button>
              <button
                aria-controls="Favourite filters-tabpanel"
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-aqbpvk-MuiButtonBase-root-MuiTab-root"
                id="Favourite filters-tab"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="MuiBox-root css-70qvj9"
                >
                  Favourite filters
                  <div
                    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-filledPrimary css-1di574v-MuiChip-root"
                  >
                    <span
                      class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                    >
                      0
                    </span>
                  </div>
                </div>
              </button>
            </div>
            <span
              class="MuiTabs-indicator css-1qltlow-MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
        <div
          class="MuiDialogContent-root css-kw13he-MuiDialogContent-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-18i0w5n-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-2a57i0-MuiGrid2-root"
            >
              <div
                aria-labelledby="Filters-tab"
                id="Filters-tabpanel"
                role="tabpanel"
                style="width: 100%;"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <div
                    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-grow css-18wkjc9-MuiGrid2-root"
                  >
                    <div
                      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-p3asko-MuiGrid2-root"
                    >
                      <h3
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-11a9lpe-MuiTypography-root"
                      >
                        Enter filter
                      </h3>
                      <div
                        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1i3o8ml-MuiGrid2-root"
                      >
                        <div
                          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-grow css-2edihr-MuiGrid2-root"
                        >
                          <div
                            class="MuiAutocomplete-root MuiAutocomplete-fullWidth css-4z7hu2-MuiAutocomplete-root"
                          >
                            <div
                              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                            >
                              <label
                                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-hvjq6j-MuiFormLabel-root-MuiInputLabel-root"
                                data-shrink="true"
                                for=":r1:"
                                id=":r1:-label"
                              >
                                Filter
                              </label>
                              <div
                                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedStart MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-1e3qgpi-MuiInputBase-root-MuiOutlinedInput-root"
                                data-id="Input"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-expanded="false"
                                  aria-invalid="false"
                                  autocapitalize="none"
                                  autocomplete="off"
                                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-12tjcea-MuiInputBase-input-MuiOutlinedInput-input"
                                  id=":r1:"
                                  role="combobox"
                                  spellcheck="false"
                                  type="text"
                                  value=""
                                />
                                <fieldset
                                  aria-hidden="true"
                                  class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
                                >
                                  <legend
                                    class="css-w1u3ce"
                                  >
                                    <span>
                                      Filter
                                    </span>
                                  </legend>
                                </fieldset>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0.6 css-xu4di-MuiGrid2-root"
                        >
                          <button
                            aria-label="Delete filter 0"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                              data-testid="DeleteIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                              />
                            </svg>
                          </button>
                        </div>
                        <div
                          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0.6 css-xu4di-MuiGrid2-root"
                        >
                          <button
                            aria-label="Add as favourite filter"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                              data-testid="FavoriteIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="m12 21.35-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54z"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                      <div
                        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-wyro15-MuiButtonBase-root-MuiButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-d8i980-MuiButton-startIcon"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                              data-testid="AddCircleIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m5 11h-4v4h-2v-4H7v-2h4V7h2v4h4z"
                              />
                            </svg>
                          </span>
                          Add new filter
                        </button>
                      </div>
                    </div>
                    <div
                      aria-orientation="vertical"
                      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-124v33r-MuiDivider-root"
                      role="separator"
                    />
                    <div
                      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-grow css-2edihr-MuiGrid2-root"
                    >
                      <h3
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-e6g60o-MuiTypography-root"
                      >
                        Filter help
                      </h3>
                      <div
                        class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
                      >
                        In the box, start typing data channel names, numbers, mathematical symbols such as
                         
                        <div
                          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1kef43z-MuiChip-root"
                        >
                          <span
                            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                          >
                            &gt;
                          </span>
                        </div>
                         
                        and
                         
                        <div
                          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1kef43z-MuiChip-root"
                        >
                          <span
                            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                          >
                            &lt;=
                          </span>
                        </div>
                         
                        and keywords such as
                         
                        <div
                          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1kef43z-MuiChip-root"
                        >
                          <span
                            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                          >
                            AND
                          </span>
                        </div>
                        ,
                         
                        <div
                          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1v526ld-MuiChip-root"
                        >
                          <span
                            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                          >
                            OR
                          </span>
                        </div>
                         
                        and
                         
                        <div
                          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-u9fr5-MuiChip-root"
                        >
                          <span
                            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                          >
                            NOT
                          </span>
                        </div>
                        . The Wizard will suggest suitable options and indicate using a grey box when each item has been recognised. Function names are not currently supported in filters.
                      </div>
                      <h3
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-e6g60o-MuiTypography-root"
                      >
                        Operators included
                      </h3>
                      <div
                        class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
                      >
                        <div
                          class="MuiBox-root css-zefc5s"
                        >
                          <div
                            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                            >
                              =
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                            >
                              !=
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                            >
                              &gt;
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                            >
                              &lt;
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                            >
                              &gt;=
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                            >
                              &lt;=
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                            >
                              is null
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                            >
                              is not null
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                            >
                              and
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                            >
                              or
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                            >
                              not
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                            >
                              (
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                            >
                              )
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="Favourite filters-tab"
                hidden=""
                id="Favourite filters-tabpanel"
                role="tabpanel"
                style="width: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiDialogActions-root MuiDialogActions-spacing css-15fu35s-MuiDialogActions-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1uent87-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Close
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1uent87-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Apply
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
